# Coupon-Redemption

./: app.py  pyproject.toml  streamlit_app.py
model/: decision_tree.pkl  dt_model_top6.pkl
static/: style.css
