[project]
name = "customer-coupon-redemption-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "streamlit>=1.47.0",
    "waitress>=3.0.2",
]
